--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>trivia game</title>
   </head>
   <body>
+		<h1 id="score" style="color: #00000000; text-shadow: 3px 2px rgb(0, 0, 0); position: absolute; top: 20px; right: 20px">Score: 0</h1>
     <div class="box" id="quiz">
       <h2 id="question">question text</h2>
       <div class="item">
